# AlgoVisualizer

./: .gitignore  AlgoVisualizer.pro  CMakeLists.txt  README.md
AlgoVisualizer/: main.cpp
AlgoVisualizer/algos/: CMakeLists.txt
AlgoVisualizer/ui/: CMakeLists.txt
AlgoVisualizer/ui/_AppComponents/: CMakeLists.txt
AlgoVisualizer/ui/_AppComponents/include/: AV_AlgorithmsList.h  AV_AppDescription.h  AV_AppTitle.h  AV_CopyRightLabel.h  AV_MenuBar.h  AV_SimulationControls.h  AV_SimulationPlayGroundHeader.h  AV_SimulationPlayground.h  AV_StatusBar.h
AlgoVisualizer/ui/_AppComponents/src/: AV_AlgorithmsList.cpp  AV_AppDescription.cpp  AV_AppTitle.cpp  AV_CopyRightLabel.cpp  AV_MenuBar.cpp  AV_SimulationControls.cpp  AV_SimulationPlayGround.cpp  AV_SimulationPlayGroundHeader.cpp  AV_StatusBar.cpp
AlgoVisualizer/ui/_AppCore/: CMakeLists.txt
AlgoVisualizer/ui/_AppCore/include/: AV_Config.h  AV_Utils.h
AlgoVisualizer/ui/_AppCore/src/: AV_Utils.cpp
AlgoVisualizer/ui/_AppLayout/: CMakeLists.txt
AlgoVisualizer/ui/_AppLayout/include/: AV_CentralLayout.h  AV_FooterLayout.h  AV_HeaderLayout.h  AV_SideBarLayout.h  AV_WindowLayout.h  Central.h  Footer.h  Header.h  LayoutUtils.h  SideBar.h  WindowGrid.h
AlgoVisualizer/ui/_AppLayout/src/: AV_CentralLayout.cpp  AV_FooterLayout.cpp  AV_HeaderLayout.cpp  AV_SideBarLayout.cpp  AV_WindowLayout.cpp  Central.cpp  Footer.cpp  Header.cpp  SideBar.cpp  WindowGrid.cpp
AlgoVisualizer/ui/_AppUI/: AppUI.cpp  AppUI.h
AlgoVisualizer/ui/_AppUtils/: CMakeLists.txt  Utils.cpp  Utils.h  config.h
doc/: AlgoVizControl.md  AlgoVizData.md  AlgoVizDesignOverview.md  Introduction.md  app_design.md
include/app/_ComponentsLayout/: WindowGrid.h
source/: main.cpp
source/AlgoVizControl/: CMakeLists.txt
source/AlgoVizControl/source/: AlgoVizController.cpp  AlgoVizController.h
source/AlgoVizControl/source/include/: AlgoVizController.h
source/AlgoVizCore/: CMakeLists.txt
source/AlgoVizCore/include/: AV_Config.h  AV_Utils.h
source/AlgoVizCore/source/: AV_Utils.cpp  AV_Utils.h
source/AlgoVizCore/source/include/: AV_Config.h
source/AlgoVizCore/src/: AV_Utils.cpp
source/AlgoVizModel/: CMakeLists.txt
source/AlgoVizModel/data/: AppData.json  GUIComponents.json
source/AlgoVizModel/data/ComponentReference/: AlgoMap.json  Controls.json  LeftBarHeader.json  MainWindow.json  MenuBar.json  RightBarHeader.json  SimulationPlayGround.json  SimulationPlayGroundHeader.json  StatusBar.json
source/AlgoVizModel/include/Algos/Sorting/: BubbleSort.h  InsertionSort.h  MergeSort.h  SelectionSort.h
source/AlgoVizModel/include/Store/: AlgoVizStore.cpp
source/AlgoVizModel/source/Algos/Sort/: BubbleSort.h  SelectionSort.h
source/AlgoVizModel/source/Store/: AlgoVizStore.cpp  AlgoVizStore.h
source/AlgoVizUI/: CMakeLists.txt
source/AlgoVizUI/libs/QBorderLayout/: CMakeLists.txt  borderlayout.cpp
source/AlgoVizUI/libs/_AppComponents/: CMakeLists.txt
source/AlgoVizUI/resources/stylesheets/: General.qss  WindowGrid.qss
source/AlgoVizUI/source/QBorderLayout/: borderlayout.h
source/AlgoVizUI/source/_AppComponents/: CMakeLists.txt
source/AlgoVizUI/source/_AppComponents/include/: AV_AlgoMap.h  AV_AppDescription.h  AV_AppTitle.h  AV_Controls.h  AV_CopyRightLabel.h  AV_MenuBar.h  AV_SimulationPlayGround.h  AV_SimulationPlayGroundHeader.h  AV_StatusBar.h
source/AlgoVizUI/source/_AppComponents/include/SimulationViews/: AV_SortingView.h
source/AlgoVizUI/source/_AppComponents/src/: AV_AlgoMap.cpp  AV_AppDescription.cpp  AV_AppTitle.cpp  AV_Controls.cpp  AV_CopyRightLabel.cpp  AV_MenuBar.cpp  AV_SimulationPlayGround.cpp  AV_SimulationPlayGroundHeader.cpp  AV_StatusBar.cpp
source/AlgoVizUI/source/_AppComponents/src/SimulationViews/: AV_SortingView.cpp
source/AlgoVizUI/source/_AppLayout/: CMakeLists.txt
source/AlgoVizUI/source/_AppLayout/include/: AV_CentralLayout.h  AV_FooterLayout.h  AV_HeaderLayout.h  AV_SideBarLayout.h  AV_WindowLayout.h  LayoutUtils.h
source/AlgoVizUI/source/_AppLayout/src/: AV_CentralLayout.cpp  AV_FooterLayout.cpp  AV_HeaderLayout.cpp  AV_SideBarLayout.cpp  AV_WindowLayout.cpp
source/AlgoVizUI/source/_GraphicalViews/: CMakeLists.txt
source/AlgoVizUI/source/_GraphicalViews/include/: SortingView.h
source/AlgoVizUI/source/_GraphicalViews/src/: SortingView.cpp
source/AlgoVizUI/source/_WindowClient/: CMakeLists.txt  WindowClient.cpp  WindowClient.h
